fixed overlapping elements in Steps and Navbar

--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,6 +1,6 @@
-ul {
+.Navbar ul {
   text-align: right;
 }
-li {
+.Navbar li {
   list-style: none;
 }
