--- a/src/Steps.css
+++ b/src/Steps.css
@@ -1,6 +1,6 @@
 .Steps p {
   position: relative;
-  top: -70px;
+  top: -30px;
   left: 0px;
   color: magenta;
   font-size: 30px;
